test/invalid/baseline/callback-attribute.txt
Syntax error at line 2 in callback-attribute.webidl, since `callback interface Attribute`:
  attribute boolean attr;
  ^ Missing return type
